[gd_scene load_steps=10 format=3 uid="uid://bvy50pyfmcs3v"]

[ext_resource type="Texture2D" uid="uid://be0u4714bpo2s" path="res://Assets/Art/Test/player_placeholder.png" id="1_52fb6"]
[ext_resource type="FontFile" uid="uid://b6ruw17j2xoxj" path="res://Assets/Fonts/AndyBold.OTF" id="1_iacmt"]
[ext_resource type="Script" uid="uid://ckmiv6sa03ak2" path="res://Scripts/Systems/main_game_system.gd" id="1_maf8m"]
[ext_resource type="Texture2D" uid="uid://bbax887jj4tej" path="res://Assets/Art/Test/equipment_icon_placeholder.png" id="2_6l7je"]
[ext_resource type="Resource" uid="uid://c3a7gfpbevcxy" path="res://Data/Missions/planet_1.tres" id="2_huasi"]
[ext_resource type="Texture2D" uid="uid://twydswvdv708" path="res://Assets/Art/Test/background_placeholder.png" id="3_jv6wh"]
[ext_resource type="Texture2D" uid="uid://dpg4o5v1ib18h" path="res://Assets/Art/Test/enemy_placeholder_1.png" id="4_x6ack"]
[ext_resource type="Theme" uid="uid://6d11oaqdfr8f" path="res://Assets/Themes/button_placeholder.tres" id="6_huasi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ia5b"]

[node name="MainScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_maf8m")
mission = ExtResource("2_huasi")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 100

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2ia5b")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="LeftBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/separation = 8

[node name="PlayerInformationBox" type="PanelContainer" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftBoxContainer/PlayerInformationBox"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftBoxContainer/PlayerInformationBox/MarginContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_constants/separation = 8

[node name="PlayerInfoContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftBoxContainer/PlayerInformationBox/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CharacterStats" type="VBoxContainer" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftBoxContainer/PlayerInformationBox/MarginContainer/VBoxContainer/PlayerInfoContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftBoxContainer/PlayerInformationBox/MarginContainer/VBoxContainer/PlayerInfoContainer/CharacterStats"]
texture_filter = 2
layout_mode = 2
theme_override_fonts/font = ExtResource("1_iacmt")
theme_override_font_sizes/font_size = 24
text = "Character"

[node name="LevelLabel" type="Label" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftBoxContainer/PlayerInformationBox/MarginContainer/VBoxContainer/PlayerInfoContainer/CharacterStats"]
unique_name_in_owner = true
texture_filter = 2
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Lv: 12"

[node name="PowerLabel" type="Label" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftBoxContainer/PlayerInformationBox/MarginContainer/VBoxContainer/PlayerInfoContainer/CharacterStats"]
unique_name_in_owner = true
texture_filter = 2
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Power: 35K"

[node name="CharacterIcon" type="TextureRect" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftBoxContainer/PlayerInformationBox/MarginContainer/VBoxContainer/PlayerInfoContainer"]
layout_mode = 2
size_flags_horizontal = 8
texture = ExtResource("1_52fb6")
expand_mode = 3
stretch_mode = 4

[node name="GearContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftBoxContainer/PlayerInformationBox/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 8
alignment = 1

[node name="HelmetIcon" type="TextureRect" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftBoxContainer/PlayerInformationBox/MarginContainer/VBoxContainer/GearContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("2_6l7je")

[node name="SuitIcon" type="TextureRect" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftBoxContainer/PlayerInformationBox/MarginContainer/VBoxContainer/GearContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("2_6l7je")

[node name="BootIcon" type="TextureRect" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftBoxContainer/PlayerInformationBox/MarginContainer/VBoxContainer/GearContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("2_6l7je")

[node name="WeaponIcon" type="TextureRect" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftBoxContainer/PlayerInformationBox/MarginContainer/VBoxContainer/GearContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("2_6l7je")

[node name="MissionBox" type="PanelContainer" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftBoxContainer/MissionBox"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftBoxContainer/MissionBox/MarginContainer"]
layout_mode = 2

[node name="MissionSelectButton" type="Button" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftBoxContainer/MissionBox/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
texture_filter = 2
layout_mode = 2
focus_mode = 0
theme = ExtResource("6_huasi")
theme_override_fonts/font = ExtResource("1_iacmt")
theme_override_font_sizes/font_size = 24
text = "New Mission"

[node name="MissionLabel" type="Label" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftBoxContainer/MissionBox/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
texture_filter = 2
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Planet 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InventoryBox" type="PanelContainer" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftBoxContainer/InventoryBox"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftBoxContainer/InventoryBox/MarginContainer"]
layout_mode = 2

[node name="InventoryOpenButton" type="Button" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftBoxContainer/InventoryBox/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
texture_filter = 2
layout_mode = 2
focus_mode = 0
theme = ExtResource("6_huasi")
theme_override_fonts/font = ExtResource("1_iacmt")
theme_override_font_sizes/font_size = 24
text = "Inventory"

[node name="InventorySizeLabel" type="Label" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftBoxContainer/InventoryBox/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
texture_filter = 2
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "16 Items"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CenterBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CenterBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="BackgroundTexture" type="TextureRect" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CenterBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("3_jv6wh")
expand_mode = 3
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CenterBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CenterBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="EnemyNameLabel" type="Label" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CenterBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 2
layout_mode = 2
theme_override_fonts/font = ExtResource("1_iacmt")
text = "Grifindor"

[node name="MissionProgressLabel" type="Label" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CenterBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 2
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_iacmt")
text = "0 / 10"
horizontal_alignment = 2

[node name="EnemyTexture" type="TextureRect" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CenterBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("4_x6ack")
expand_mode = 5

[node name="EnemyHealthBar" type="ProgressBar" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CenterBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
size_flags_vertical = 10
step = 1.0
value = 50.0
show_percentage = false

[node name="AttackButton" type="Button" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CenterBoxContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
focus_mode = 0

[node name="RightBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(175, 0)
layout_mode = 2
theme_override_constants/separation = 8

[node name="SettingsBox" type="PanelContainer" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RightBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RightBoxContainer/SettingsBox"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="OptionsButton" type="Button" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RightBoxContainer/SettingsBox/MarginContainer"]
unique_name_in_owner = true
texture_filter = 2
layout_mode = 2
focus_mode = 0
theme = ExtResource("6_huasi")
theme_override_fonts/font = ExtResource("1_iacmt")
theme_override_font_sizes/font_size = 16
text = "Options"

[node name="LogBox" type="PanelContainer" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RightBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RightBoxContainer/LogBox"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RightBoxContainer/LogBox/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RightBoxContainer/LogBox/MarginContainer/VBoxContainer"]
texture_filter = 2
layout_mode = 2
theme_override_fonts/font = ExtResource("1_iacmt")
theme_override_font_sizes/font_size = 24
text = "Mission Log"

[node name="MissionLogLabel" type="RichTextLabel" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RightBoxContainer/LogBox/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
texture_filter = 2
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/line_separation = 8
text = "- Found weapon
- Gained 512 Gold
- Defeated enemy












"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GoldLabel" type="Label" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
texture_filter = 2
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_iacmt")
text = "100 Gold"

[node name="UpgradeButton" type="Button" parent="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
texture_filter = 2
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
focus_mode = 0
theme = ExtResource("6_huasi")
theme_override_fonts/font = ExtResource("1_iacmt")
text = "NeoForge"

[connection signal="pressed" from="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftBoxContainer/MissionBox/MarginContainer/VBoxContainer/MissionSelectButton" to="." method="_on_mission_select_button_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftBoxContainer/InventoryBox/MarginContainer/VBoxContainer/InventoryOpenButton" to="." method="_on_inventory_open_button_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CenterBoxContainer/PanelContainer/MarginContainer/AttackButton" to="." method="_on_attack_button_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RightBoxContainer/SettingsBox/MarginContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/UpgradeButton" to="." method="_on_upgrade_button_pressed"]
